--- a/Conttacts/CeilViewTableViewCell.xib
+++ b/Conttacts/CeilViewTableViewCell.xib
@@ -12,33 +12,44 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="45" id="KGk-i7-Jjw" customClass="CeilViewTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CeilViewTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="45"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lt-r8-hHD">
-                        <rect key="frame" x="16" y="11" width="264" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3lt-r8-hHD">
+                        <rect key="frame" x="21" y="11" width="259" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="W27-pu-YlT"/>
+                            <constraint firstAttribute="width" constant="259" id="YS0-ht-NS5"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dlq-xy-GyS">
-                        <rect key="frame" x="288" y="10" width="22" height="22"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dlq-xy-GyS">
+                        <rect key="frame" x="292" y="11" width="22" height="22"/>
                         <color key="tintColor" red="0.85098039219999999" green="0.56862745100000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </button>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="dlq-xy-GyS" secondAttribute="trailing" constant="6" id="0uB-Oy-HFc"/>
+                    <constraint firstAttribute="bottom" secondItem="dlq-xy-GyS" secondAttribute="bottom" constant="11.5" id="9Ah-nE-Pnz"/>
+                    <constraint firstItem="dlq-xy-GyS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="Sam-OG-m0D"/>
+                    <constraint firstItem="3lt-r8-hHD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="11" id="Wao-hF-2bZ"/>
+                    <constraint firstAttribute="bottom" secondItem="3lt-r8-hHD" secondAttribute="bottom" constant="12.5" id="fek-CX-lde"/>
+                    <constraint firstAttribute="trailing" secondItem="dlq-xy-GyS" secondAttribute="trailing" constant="6" id="fxL-a3-til"/>
+                    <constraint firstItem="3lt-r8-hHD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="21" id="ne2-tc-I5g"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="contactName" destination="3lt-r8-hHD" id="gxC-Hm-2yO"/>
                 <outlet property="infoBtn" destination="dlq-xy-GyS" id="KHl-5F-10A"/>
             </connections>
-            <point key="canvasLocation" x="-56.521739130434788" y="25.111607142857142"/>
+            <point key="canvasLocation" x="-43.478260869565219" y="25.111607142857142"/>
         </tableViewCell>
     </objects>
 </document>
