--- a/Conttacts/HeaderCell2.xib
+++ b/Conttacts/HeaderCell2.xib
@@ -23,7 +23,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="L" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aYb-8R-UYg">
-                    <rect key="frame" x="25" y="20.5" width="10" height="20.5"/>
+                    <rect key="frame" x="25" y="20" width="10" height="21"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -40,14 +40,25 @@
                     <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kD6-a2-McH">
+                    <rect key="frame" x="0.0" y="59" width="344" height="2"/>
+                    <color key="backgroundColor" red="0.87450980392156863" green="0.87450980392156863" blue="0.87450980392156863" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="2" id="g4g-Re-2vM"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="aYb-8R-UYg" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="1e0-oK-XXt"/>
+                <constraint firstItem="kD6-a2-McH" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5CM-w9-ulv"/>
                 <constraint firstItem="7Ah-W7-1Py" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Boo-hU-rwo"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="7Ah-W7-1Py" secondAttribute="trailing" constant="20" id="CrE-th-cPb"/>
+                <constraint firstAttribute="trailing" secondItem="kD6-a2-McH" secondAttribute="trailing" id="KEA-JA-375"/>
                 <constraint firstItem="hKJ-8o-end" firstAttribute="leading" secondItem="aYb-8R-UYg" secondAttribute="trailing" constant="10" id="NBz-If-NHX"/>
                 <constraint firstItem="hKJ-8o-end" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="t6M-F8-E7I"/>
+                <constraint firstItem="kD6-a2-McH" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="ugv-WX-WXL"/>
                 <constraint firstItem="aYb-8R-UYg" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="25" id="ukv-Jv-Ufp"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
